# blossom-rs

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  HANDOFF.md  LICENSE  README.md  RELEASE_NOTES.md  blossom_locks.db  build.rs  run-tests.sh  run_tui.sh
.github/actions/build-blossom-binary/: action.yml
.github/actions/publish-crate/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: build-artifact.yml  build-tui-artifact.yml  ci.yml  publish.yml
blossom-cli/: Cargo.toml  README.md  build.rs
blossom-cli/src/: main.rs
blossom-cli/tests/: cli_integration.rs
blossom-nip34/: Cargo.toml  README.md
blossom-nip34/src/: config.rs  lib.rs  nip34_types.rs  state.rs
blossom-nip34/src/git_server/: command.rs  mod.rs
blossom-nip34/src/relay/: admin.rs  dispatch.rs  mod.rs  nip11.rs  plugins.rs  policies.rs  policy_db.rs  websocket.rs
blossom-nip34/tests/: integration_tests.rs
blossom-server/: Cargo.toml  README.md
blossom-server/src/: main.rs
blossom-server/tests/: e2e.rs
blossom-tui/: Cargo.toml
blossom-tui/src/: lib.rs  main.rs  nostr_sign.rs
docs/: BUD-07.md  BUD-08.md  BUD-17.md  BUD-19.md  BUD-20.md  iroh-transport.md
git-helpers/: Cargo.toml
git-helpers/src/: auth.rs  blossom_backend.rs  lib.rs  nostr_backend.rs  nostr_relay.rs
scripts/: README.md  linux-runner.sh  macos-runner.sh  run_tui.sh  windows-runner.ps1
src/: integrity.rs  lib.rs  nostr_events.rs  otel.rs  protocol.rs  ratelimit.rs  stats.rs  traits.rs  webhooks.rs
src/access/: mod.rs
src/auth/: mod.rs  nip98.rs  signer.rs
src/client/: batch.rs  mod.rs  multi.rs
src/db/: memory.rs  mod.rs  postgres.rs  sqlite.rs
src/labels/: mod.rs
src/lfs/: compress.rs  mod.rs
src/locks/: mod.rs
src/media/: image_processor.rs  mod.rs
src/server/: admin.rs  locks.rs  mod.rs  nip96.rs
src/storage/: filesystem.rs  memory.rs  mod.rs  s3.rs
src/transport/: iroh_client.rs  iroh_transport.rs  mod.rs  pkarr_discovery.rs  wire.rs
tests/: integration.rs  iroh_integration.rs  iroh_lfs_tests.rs  lfs_storage_tests.rs  lock_tests.rs  pkarr_integration.rs  postgres_integration.rs  property_tests.rs  s3_integration.rs  sqlite_integration.rs
xtask/: Cargo.toml
xtask/src/: main.rs
