[package]
name = "blossom-rs"
version = "0.1.0"
edition = "2021"
description = "Full-featured Blossom (BUD-01) blob storage library for Rust — embeddable server, async client, BIP-340 Nostr auth"
license = "MIT"
repository = "https://github.com/MonumentalSystems/blossom-rs"
keywords = ["blossom", "nostr", "blob", "storage", "bip340"]
categories = ["web-programming", "cryptography"]

[features]
default = ["server", "client", "filesystem"]

# Core
server = ["dep:axum", "dep:axum-extra", "dep:tower-http", "dep:reqwest"]
client = ["dep:reqwest"]
filesystem = []

# Storage backends
s3 = ["dep:aws-sdk-s3", "dep:aws-config"]
s3-compat = ["server"]

# Database backends
db-sqlite = ["dep:sqlx"]
db-postgres = ["dep:sqlx"]

# Media processing
media = ["dep:image", "dep:webp", "dep:blurhash", "dep:kamadak-exif"]

# Content labeling
labels = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers"]

[dependencies]
# Crypto
secp256k1 = { version = "0.29", features = ["rand-std", "global-context"] }
sha2 = "0.10"
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1", features = ["sync", "time", "fs"] }

# Logging
tracing = "0.1"

# Error handling
thiserror = "2"

# Server (optional)
axum = { version = "0.7", features = ["ws"], optional = true }
axum-extra = { version = "0.9", optional = true }
tower-http = { version = "0.5", features = ["cors", "limit"], optional = true }

# Client (optional)
reqwest = { version = "0.12", features = ["json"], optional = true }

# S3 (optional)
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", optional = true }

# Database (optional)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres"], optional = true }

# Media processing (optional)
image = { version = "0.25", optional = true }
webp = { version = "0.3", optional = true }
blurhash = { version = "0.2", optional = true }
kamadak-exif = { version = "0.5", optional = true }

# Content labeling (optional)
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }

# Statistics
dashmap = "6"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
tempfile = "3"
proptest = "1"
