
[package]
name = "blossom-rs"
version = "0.4.1"
edition = "2021"
rust-version = "1.80"
description = "Full-featured Blossom (BUD-01) blob storage library for Rust — embeddable server, async client, BIP-340 Nostr auth"
license = "MIT"
readme = "README.md"
repository = "https://github.com/MonumentalSystems/blossom-rs"
keywords = ["blossom", "nostr", "blob", "storage", "bip340"]
categories = ["web-programming", "cryptography"]
[workspace]
members = [".", "blossom-cli", "blossom-server", "xtask"]

[[bin]]
name = "blossom-tui"
path = "src/bin/blossom-tui.rs"
required-features = ["tui"]

[features]
default = ["server", "client", "filesystem", "lfs"]

# Core
server = ["dep:axum", "dep:axum-extra", "dep:tower-http", "dep:reqwest", "lfs"]
client = ["dep:reqwest"]
filesystem = []

# Storage backends
s3 = ["dep:aws-sdk-s3", "dep:aws-config"]
s3-compat = ["server"]

# Database backends
db-sqlite = ["dep:sqlx"]
db-postgres = ["dep:sqlx"]

# Media processing
media = ["dep:image", "dep:webp", "dep:blurhash", "dep:kamadak-exif"]

# Content labeling
labels = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers"]

# P2P transport via iroh QUIC
iroh-transport = ["dep:iroh", "dep:anyhow", "lfs"]

# PKARR discovery — publish/resolve blossom endpoints via Mainline DHT
pkarr-discovery = ["dep:pkarr", "iroh-transport"]

# Observability — opt-in OTEL export support for consumers
otel = [
    "dep:tracing-opentelemetry",
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-subscriber",
]

# Terminal UI binary (blossom-tui)
tui = ["dep:ratatui", "dep:crossterm", "client"]

# LFS delta compression — requires C toolchain (xdelta3 + zstd)
lfs = ["dep:xdelta3", "dep:zstd"]

[dependencies]
anyhow = { version = "1", optional = true }
aws-config = { version = "1", optional = true }

# S3 (optional)
aws-sdk-s3 = { version = "1", optional = true }

# Server (optional)
axum = { version = "0.7", features = ["ws"], optional = true }
axum-extra = { version = "0.9", optional = true }
bech32 = "0.11"
blurhash = { version = "0.2", optional = true }

# Content labeling (optional)
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
crossterm = { version = "0.29", optional = true }

# Statistics
dashmap = "6"
hex = "0.4"

# Media processing (optional)
image = { version = "0.25", optional = true }

# P2P transport (optional)
iroh = { version = "0.97", optional = true }
kamadak-exif = { version = "0.5", optional = true }
opentelemetry = { version = "0.27", optional = true }
opentelemetry-otlp = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"], optional = true }

# PKARR discovery (optional)
pkarr = { version = "6.0.0-rc.0", default-features = false, features = ["relays", "signed_packet"], optional = true }

# Terminal UI (optional — blossom-tui binary)
ratatui = { version = "0.30", optional = true }

# Client (optional)
reqwest = { version = "0.12", default-features = false, features = ["json", "http2", "rustls-tls", "stream"], optional = true }
# Crypto
secp256k1 = { version = "0.29", features = ["rand-std", "global-context"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

# Database (optional)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres"], optional = true }

# Error handling
thiserror = "2"

# Async
tokio = { version = "1", features = ["sync", "time", "fs", "rt-multi-thread", "io-util", "macros"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.5", features = ["cors", "limit", "trace"], optional = true }

# Logging / tracing
tracing = "0.1"

# OpenTelemetry (optional)
tracing-opentelemetry = { version = "0.28", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"], optional = true }

# UUID generation for lock IDs
uuid = { version = "1", features = ["v4"] }
webp = { version = "0.3", optional = true }
xdelta3 = { version = "0.1.5", optional = true }
zstd = { version = "0.13.3", optional = true }

[dev-dependencies]
proptest = "1"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "http2", "rustls-tls"] }
serial_test = "3"
tempfile = "3"
tokio = { version = "1", features = ["full"] }

[[test]]
name = "integration"
required-features = ["server", "client", "filesystem", "lfs"]

[[test]]
name = "iroh_integration"
required-features = ["iroh-transport"]

[[test]]
name = "iroh_lfs_tests"
required-features = ["iroh-transport", "lfs"]

[[test]]
name = "lfs_storage_tests"
required-features = ["server", "lfs"]

[[test]]
name = "lock_tests"
required-features = ["server"]

[[test]]
name = "pkarr_integration"
required-features = ["pkarr-discovery"]

[[test]]
name = "postgres_integration"
required-features = ["db-postgres"]

[[test]]
name = "s3_integration"
required-features = ["s3"]

[[test]]
name = "sqlite_integration"
required-features = ["db-sqlite"]

