[package]
name = "blossom-cli"
version = "0.1.3"
edition = "2021"
description = "CLI client for Blossom blob storage — upload, download, mirror, keygen with BIP-340 Nostr auth"
license = "MIT"
readme = "README.md"
repository = "https://github.com/MonumentalSystems/blossom-rs"
keywords = ["blossom", "nostr", "cli", "blob", "storage"]
categories = ["command-line-utilities"]

[dependencies]
blossom-rs = { path = "..", version = "0.1.3", features = ["client"] }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
hex = "0.4"
bech32 = "0.11"
