[package]
name = "blossom-cli"
version = "0.3.0"
edition = "2021"
description = "CLI client for Blossom blob storage — upload, download, mirror, keygen with BIP-340 Nostr auth"
license = "MIT"
readme = "README.md"
repository = "https://github.com/MonumentalSystems/blossom-rs"
keywords = ["blossom", "nostr", "cli", "blob", "storage"]
categories = ["command-line-utilities"]

[dependencies]
blossom-rs = { path = "..", version = "0.3.0", features = ["client", "iroh-transport", "pkarr-discovery"] }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hex = "0.4"
bech32 = "0.11"
iroh = "0.97"
pkarr = { version = "6.0.0-rc.0", default-features = false, features = ["keys"] }

[build-dependencies]
sha2 = "0.10"
hex = "0.4"
serde_json = "1.0"

[dev-dependencies]
blossom-rs = { path = "..", version = "0.3.0", features = ["server", "client", "filesystem", "iroh-transport"] }
axum = "0.7"
