[package]
name = "blossom-server"
version = "0.1.0"
edition = "2021"
description = "Example Blossom API server — showcases all blossom-rs features"
license = "MIT"
publish = false

[dependencies]
blossom-rs = { path = "..", features = ["server", "filesystem", "db-sqlite"] }
axum = "0.7"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
serde_json = "1.0"
