[package]
name = "blossom-tui"
version = "0.4.1"
edition = "2021"
description = "Terminal UI for Blossom blob storage — gitui-inspired multi-tab TUI"
license = "MIT"
readme = "README.md"
repository = "https://github.com/MonumentalSystems/blossom-rs"
keywords = ["blossom", "nostr", "tui", "blob", "storage"]
categories = ["command-line-utilities"]

[[bin]]
name = "blossom-tui"
path = "src/main.rs"

[dependencies]
blossom-rs = { path = "..", version = "0.4.1", features = ["client"] }
bech32 = "0.11"
crossterm = "0.29"
hex = "0.4"
ratatui = "0.30"
reqwest = { version = "0.12", default-features = false, features = ["json", "http2", "rustls-tls"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
