[package]
name = "blossom-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
blossom-rs = { path = "..", features = ["client"] }
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "http2", "rustls-tls"] }
serde_json = "1.0"
hex = "0.4"
bech32 = "0.11"
