[package]
name = "blossom-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blossom-rs = { workspace = true, features = ["client"] }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
bech32 = { workspace = true }
