[package]
name = "git-remotes"
version = "0.1.0"
edition = "2021"
description = "git-remote-blossom and git-remote-nostr helpers for Blossom + NIP-34"
license = "MIT"
repository = "https://github.com/MonumentalSystems/blossom-rs"
keywords = ["git", "nostr", "blossom", "nip34", "remote-helper"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "git-remote-blossom"
path = "src/bin/git-remote-blossom.rs"

[[bin]]
name = "git-remote-nostr"
path = "src/bin/git-remote-nostr.rs"

[dependencies]
# HTTP client (blocking for sync protocol loop)
reqwest = { version = "0.12", features = ["blocking", "json"] }

# Async runtime (used for WebSocket Nostr relay queries)
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Hex encoding / SHA256
hex = "0.4"
sha2 = { version = "0.10", features = ["std"] }

# Nostr key handling (NIP-19 bech32)
bech32 = "0.11"
secp256k1 = { version = "0.29", features = ["rand"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging to stderr (helpers must not pollute stdout)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
